[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/MapScene.gd" id="1"]
[ext_resource type="Texture2D" path="res://Art/backgrounds/growth_combat.png" id="2"]

[node name="MapScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="TextureRect" parent="."]
modulate = Color(0.3, 0.3, 0.3, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="TopInfo" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="LayerLabel" type="Label" parent="VBox/TopInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Growth"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="VBox/TopInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Room 1/15"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Grid" type="HBoxContainer" parent="VBox/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="WaitLabel" type="Label" parent="VBox/CenterContainer"]
visible = false
layout_mode = 2
text = "Generating path..."
